# dilu

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: cicd.yml
src/: app.rs  config_file.rs  core.rs  dal.rs  display.rs  flags.rs  icon.rs  main.rs  sort.rs
src/flags/: blocks.rs
src/meta/: date.rs  filetype.rs  mod.rs  name.rs
