[package]
authors = ["WeiZhang <kweizh@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "database-interfaces", "Filesystem"]
description = "A files and database client CLI tool built on top of OpenDAL, access data painlessly in CLI."
keywords = ["opendal", "ls", "s3", "redis"]
license = "Apache-2.0"
name = "dilu"
readme = "./README.md"
repository = "https://github.com/zwpaper/dilu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dl"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
version_check = "0.9.*"

[dependencies]
crossterm = { version = "0.24.0", features = ["serde"]}
dirs = "3.0.*"
libc = "0.2.*"
human-sort = "0.2.2"
term_grid = "0.1.*"
terminal_size = "0.1.*"
thiserror = "1.0"
sys-locale = "0.2.4"
once_cell = "1.17.1"
chrono = { version = "0.4.*", features = ["unstable-locales"] }
chrono-humanize = "0.1.*"
unicode-width = "0.1.*"
lscolors = "0.9.0"
wild = "2.0.*"
globset = "0.4.*"
xdg = "2.1.*"
yaml-rust = "0.4.*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.3.*"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
opendal = "0.30.2"
reqwest = "0.11.14"
futures = "0.3.27"

[target.'cfg(unix)'.dependencies]
users = "0.11.*"
xattr = "0.2.*"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Memory"] }

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.1"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1.0.1"
tempfile = "3"
serial_test = "0.5"

[features]
sudo = []

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
